--- a/app/views/mvp1/user-add-user-prap-g3s.html
+++ b/app/views/mvp1/user-add-user-prap-g3s.html
@@ -45,7 +45,7 @@
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
-                <input class="govuk-input" id="user-organisation" name="user-organisation" value="G$S" type="hidden" >
+                <input class="govuk-input" id="user-organisation" name="user-organisation" value="G4S" type="hidden" >
 
                 {{ govukButton({
                     text: "Continue"
