Content change to add admin on dashboards

--- a/app/views/mvp1/dashboard-service-prap-no-orgs.html
+++ b/app/views/mvp1/dashboard-service-prap-no-orgs.html
@@ -63,7 +63,7 @@
             {% endif %}
 
             <li>
-                <a href="user-add-user-prap-dwp" class="govuk-link">Add an admin for this service</a>
+                <a href="user-add-user-prap-dwp" class="govuk-link">Add a service admin</a>
             </li>
 
             {% if data['organisation-name'] %}
