Amends to add admin content

--- a/app/views/mvp1/user-add-user-prap-dwp.html
+++ b/app/views/mvp1/user-add-user-prap-dwp.html
@@ -18,13 +18,13 @@
             <form action="user-admin-confirmation-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: 'Add an admin for this service',
+                        html: 'Add a service admin',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
                 })}}
 
-                <p>This user must be a DWP employee.</p>
+                <p>The admin must be a DWP employee.</p>
 
                 {{ govukInput({
                     label: {
