Content update for organisation choice

--- a/app/views/mvp1/user-admin-confirmation-prap.html
+++ b/app/views/mvp1/user-admin-confirmation-prap.html
@@ -26,7 +26,7 @@
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
       <p>
-        <a href="user-add-user-prap-dwp" class="govuk-link">Add another admin to this service</a></p>
+        <a href="user-add-user-prap-dwp" class="govuk-link">Add another service admin</a></p>
 
       <p>
       <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
