--- a/app/views/mvp1/user-add-prap.html
+++ b/app/views/mvp1/user-add-prap.html
@@ -18,7 +18,7 @@
             <form action="user-add-user-prap" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                        html: '<span class="govuk-caption-l">Add a user</span>Which organisation are you adding the user to?',
+                        html: '<span class="govuk-caption-l">Add a user</span>Who is the user employed by?',
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
