Amends to orgs in typeahead and js back to confirm

--- a/app/views/mvp1/user-add-prap.html
+++ b/app/views/mvp1/user-add-prap.html
@@ -31,12 +31,9 @@
 
                     <select class="govuk-select form-control" name="user-organisation" id="user-organisation">
                         <option value="" selected>Choose an organisation</option>
-                        <option value="BPDTS">BPDTS</option>
                         <option value="Capita">Capita</option>
                         <option value="DWP">DWP</option>
-                        <option value="MoJ">MoJ</option>
-                        <option value="MoD">MoD</option>
-                        <option value="NHS">NHS</option>
+                        <option value="Serco">Serco</option>
                         <option value="Remploy">Remploy</option>
                         <option value="G4S">G4S</option>
                         <option value="London Borough of Croydon Council">London Borough of Croydon Council</option>
