--- a/app/views/mvp1/user-confirmation-prap.html
+++ b/app/views/mvp1/user-confirmation-prap.html
@@ -26,7 +26,7 @@
       <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
       <p>
-        <a href="#" class="govuk-link">Add another user to {{ data['user-organisation'] }}</a></p>
+        <a href="javascript:window.history.back()" class="govuk-link">Add another user to {{ data['user-organisation'] }}</a></p>
 
       <p>
       <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
