--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -114,24 +114,28 @@
         </li>
   
         <li class="pagination__item">
-            <a class="pagination__link" href="user-list-prap-3" aria-label="Page 2">3</a>
+            <a class="pagination__link" href="user-list-prap-3" aria-label="Page 3">3</a>
           </li>
   
           <li class="pagination__item">
-              <a class="pagination__link" href="#" aria-label="Page 2">4</a>
+              <a class="pagination__link" href="user-list-prap-4" aria-label="Page 4">4</a>
             </li>
   
             <li class="pagination__item">
-                <a class="pagination__link" href="#" aria-label="Page 2">5</a>
+                <a class="pagination__link" href="user-list-prap-5" aria-label="Page 5">5</a>
               </li>
   
               <li class="pagination__item">
-                  <a class="pagination__link" href="#" aria-label="Page 2">6</a>
+                  <a class="pagination__link" href="user-list-prap-6" aria-label="Page 6">6</a>
                 </li>
   
                 <li class="pagination__item">
-                    <a class="pagination__link" href="#" aria-label="Page 2">7</a>
+                    <a class="pagination__link" href="user-list-prap-7" aria-label="Page 7">7</a>
                   </li>
+
+                  <li class="pagination__item">
+                      <a class="pagination__link" href="user-list-prap-8" aria-label="Page 8">8</a>
+                    </li>
   
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap-3" aria-label="Next page">
