--- a/app/views/mvp1/user-list-prap-6.html
+++ b/app/views/mvp1/user-list-prap-6.html
@@ -28,71 +28,71 @@
     </thead>
 
     <tbody class="govuk-table__body">
-        <tr class="govuk-table__row">
-            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Leslie Silver</a></th>
-            <td class="govuk-table__cell">London Borough of Croydon Council</td>
-            <td class="govuk-table__cell">Pending activation</td>
-          </tr>
-            
+        
                   <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Ken Bates</a></th>
-                    <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                    <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Carl Shutt</a></th>
+                    <td class="govuk-table__cell">Remploy</td>
                     <td class="govuk-table__cell ">Active</td>
                   </tr>
             
                   <tr class="govuk-table__row">
-                      <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Massimo Cellino</a></th>
-                      <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                      <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Tony Yeboah</a></th>
+                      <td class="govuk-table__cell">Remploy</td>
                       <td class="govuk-table__cell ">Active</td>
                     </tr>
 
                     <tr class="govuk-table__row">
-                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Andy Radrizzani</a></th>
-                            <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Janet Sheridan</a></th>
+                            <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
                           <tr class="govuk-table__row">
-                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Trevor Birch</a></th>
-                            <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Mervyn Day</a></th>
+                            <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
                           <tr class="govuk-table__row">
-                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gerald Krasner</a></th>
-                            <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Robert Molenaar</a></th>
+                            <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
                           <tr class="govuk-table__row">
-                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Bill Fotherby</a></th>
-                            <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Nigella Worthington</a></th>
+                            <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
                     
                           <tr class="govuk-table__row">
-                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Manny Cussins</a></th>
-                            <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">David Rocastle</a></th>
+                            <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
 
                           <tr class="govuk-table__row">
-                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Albert Morris</a></th>
-                            <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">David White</a></th>
+                            <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
 
                           <tr class="govuk-table__row">
-                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Harry Reynolds</a></th>
-                            <td class="govuk-table__cell">London Borough of Croydon Council</td>
+                            <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Catherine Palmer</a></th>
+                            <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
                     
 
-
+                          <tr class="govuk-table__row">
+                                <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Kamara</a></th>
+                                <td class="govuk-table__cell">Remploy</td>
+                                <td class="govuk-table__cell">Active</td>
+                              </tr>
+                                
           
       
 
@@ -104,12 +104,12 @@
 
   <nav role="navigation" aria-label="Pagination">
       <div class="pagination__summary">
-        Showing 31 &ndash; 40 of 74 results
+        Showing 51 &ndash; 60 of 74 results
       </div>
   
       <ul class="pagination">
         <li class="pagination__item">
-          <a class="pagination__link" href="user-list-prap-3" aria-label="Previous page">
+          <a class="pagination__link" href="user-list-prap-5" aria-label="Previous page">
             <span aria-hidden="true" role="presentation">&laquo;</span> Previous
           </a>
         </li>
@@ -127,7 +127,7 @@
           </li>
   
           <li class="pagination__item">
-              <span class="pagination__link current" href="#" aria-label="Page 4">4</span>
+              <a class="pagination__link"  href="user-list-prap-4" aria-label="Page 4">4</a>
             </li>
   
             <li class="pagination__item">
@@ -135,7 +135,7 @@
               </li>
   
               <li class="pagination__item">
-                  <a class="pagination__link" href="user-list-prap-6" aria-label="Page 6">6</a>
+                  <span class="pagination__link current" href="#" aria-label="Page 6">6</span>
                 </li>
   
                 <li class="pagination__item">
@@ -147,7 +147,7 @@
                     </li>
   
         <li class="pagination__item">
-          <a class="pagination__link" href="user-list-prap-5" aria-label="Next page">
+          <a class="pagination__link" href="user-list-prap-7" aria-label="Next page">
             Next <span aria-hidden="true" role="presentation">&raquo;</span>
           </a>
         </li>
