--- a/app/views/mvp1/includes/user-access-rights-prap.html
+++ b/app/views/mvp1/includes/user-access-rights-prap.html
@@ -3,26 +3,20 @@
   name: "user-access-rights",
   fieldset: {
     legend: {
-      text: "Access rights",
+      text: "Permission level",
       isPageHeading: false
     }
   },
   items: [
     {
-      value: "Service admin",
-      text: "Service admin",
-      hint: {
-        html: "Admin for one service<br>Invite users to their service"
-      },
-      checked: checked("['user-access-rights']", "Service admin")
+      value: "admin",
+      text: "Admin",
+      checked: checked("['user-access-rights']", "admin")
     },
     {
-      value: "User",
-      text: "User",
-      hint: {
-        text: "Can access a service"
-      },
-      checked: checked("['user-access-rights']", "User")
+      value: "user",
+      text: "Standard",
+      checked: checked("['user-access-rights']", "user")
     }
   ]
 }) }}
