--- a/app/views/mvp1/user-confirmation-prap.html
+++ b/app/views/mvp1/user-confirmation-prap.html
@@ -9,27 +9,48 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      
+    {% set panelTitle %}
+        {% if data["user-access-rights"] == 'admin' %}
+            Admin added
+        {% else %}
+            User added
+        {% endif %}
+    {% endset %}
 
-        {{ govukPanel({
+    {% set panelContent %}
+        {% if data["user-organisation"] == 'dwp' %}
+            {{ data["user-full-name"] }} added to the Department for Work and Pensions
+        {% else %}
+            {{ data["user-full-name"] }} added to {{ data["user-organisation"] }}
+        {% endif %}
+    {% endset %}
 
-      
-          titleText: "User added",
-    
-          html: data["user-full-name"] + " added to " + data["user-organisation"]
-        }) }}
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            {{ govukPanel({
+                titleText: panelTitle,
+                html: panelContent
+            }) }}
 
+            <p>An invitation has been sent to {{data['user-email-address']}}</p>
 
+            <p>
+                {% if data['user-organisation'] == 'dwp' %}
+                    <a href="user-add-user-prap-dwp" class="govuk-link">
+                        Add another DWP user
+                    </a>
+                {% else %}
+                    <a href="javascript:window.history.back()" class="govuk-link">
+                        Add another user to {{ data['user-organisation'] }}
+                    </a>
+                {% endif %}
+            </p>
 
-      <p>An invitation has been sent to {{data['user-email-address']}}</p>
-
-      <p>
-        <a href="javascript:window.history.back()" class="govuk-link">Add another user to {{ data['user-organisation'] }}</a></p>
-
-      <p>
-      <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
+            <p>
+                <a href="dashboard-service-prap" class="govuk-link">
+                    Back to dashboard
+                </a>
+            </p>
+        </div>
     </div>
-  </div>
 {% endblock %}
