--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -28,6 +28,28 @@
                 </thead>
 
                 <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            DWP
+                        </th>
+
+                        <td class="govuk-table__cell govuk-table__cell--numeric">
+                            {% if data['user-full-name'] and data['organisation-name'] == 'dwp' %}
+                                1
+                            {% else %}
+                                0
+                            {% endif %}
+                        </td>
+
+                        <td class="govuk-table__cell">
+                            {% if data['user-full-name'] and data['organisation-name'] == 'dwp' %}
+                                <a href="user-list-prap-new" class="govuk-link">View users</a>
+                            {% else %}
+                                <a href="user-add-user-prap-dwp" class="govuk-link">Add user</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+
                     {% if data['organisation-name'] %}
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
@@ -117,7 +139,7 @@
                             {% else %}
                                 23
                             {% endif %}
-                            
+
                         </td>
 
                         <td class="govuk-table__cell">
@@ -137,7 +159,7 @@
                             {% else %}
                                 7
                             {% endif %}
-                            
+
                         </td>
 
                         <td class="govuk-table__cell">
