Minor changes suggested by Nick

--- a/app/views/mvp1/includes/user-access-rights-prap.html
+++ b/app/views/mvp1/includes/user-access-rights-prap.html
@@ -4,7 +4,8 @@
   fieldset: {
     legend: {
       text: "Permission level",
-      isPageHeading: false
+      isPageHeading: true,
+      classes: "govuk-fieldset__legend--l"
     }
   },
   items: [
