--- a/app/views/mvp1/user-add-prap.html
+++ b/app/views/mvp1/user-add-prap.html
@@ -22,7 +22,7 @@
                     name: "user-is-dwp",
                     fieldset: {
                         legend: {
-                            html: '<span class="govuk-caption-l">Add a user</span>Is the user employed by the Department for Work and Pensions?',
+                            html: '<span class="govuk-caption-l">Add a user</span>Is the user employed by DWP?',
                             isPageHeading: true,
                             classes: "govuk-fieldset__legend--l"
                         }
