Changes to index and org views

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,11 +41,14 @@
                     Added a 'no organisation' service admin dashboard view
                 </li>
                 <li>
-                    Added typeahead example to add new user journey
+                    Added typeahead example to choose organisation on add new user journey
+                </li>
+                <li>
+                    Improved the suspend/delete actions on the User View page
                 </li>
             </ul>
 
-            <a href="/mvp1/signin" class="govuk-button">View MVP prototype</a>
+            <a href="/mvp1/signin" class="govuk-button govuk-!-margin-right-1">View MVP prototype</a>
             <a href="/mvp1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
         {% endset %}
 
