Updated dynamic user count for DWP

--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -34,7 +34,7 @@
                         </th>
 
                         <td class="govuk-table__cell govuk-table__cell--numeric">
-                            {% if data['user-full-name'] and data['organisation-name'] == 'dwp' %}
+                            {% if data['user-full-name'] and data['user-organisation'] == 'dwp' %}
                                 1
                             {% else %}
                                 0
