Fixed dynamic numbers on org list

--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -42,7 +42,7 @@
                         </td>
 
                         <td class="govuk-table__cell">
-                            {% if data['user-full-name'] and data['organisation-name'] == 'dwp' %}
+                            {% if data['user-full-name'] and data['user-organisation'] == 'dwp' %}
                                 <a href="user-list-prap-new" class="govuk-link">View users</a>
                             {% else %}
                                 <a href="user-add-user-prap-dwp" class="govuk-link">Add user</a>
