--- a/app/views/v3/service-list.html
+++ b/app/views/v3/service-list.html
@@ -17,7 +17,7 @@
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
         <th scope="col" class="govuk-table__header govuk-!-width-half">Name</th>
-        <th scope="col" class="govuk-table__header govuk-table__header--numeric govuk-!-width-one-quarter">Partner organisations</th>
+        <th scope="col" class="govuk-table__header govuk-table__header--numeric govuk-!-width-one-quarter">Organisations</th>
         <th scope="col" class="govuk-table__header govuk-table__header--numeric">Users</th>
       </tr>
     </thead>
