--- a/app/views/v3/user-list-2.html
+++ b/app/views/v3/user-list-2.html
@@ -13,7 +13,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add" class="govuk-button listing-page">Add new user</a>
+  <a href="user-add" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -30,35 +30,35 @@
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jane Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell">L4 User</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joan Smith</a></th>
         <td class="govuk-table__cell">G3S</td>
         <td class="govuk-table__cell">L4 User</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">James Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell">L4 User</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Joe Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell">L4 User</td>
-        <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Inactive</span></td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jack Smith</a></th>
         <td class="govuk-table__cell">Capita</td>
         <td class="govuk-table__cell">L4 User</td>
-        <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+        <td class="govuk-table__cell">Active</td>
       </tr>
     </tbody>
   </table>
