--- a/app/views/v3/user-list.html
+++ b/app/views/v3/user-list.html
@@ -13,7 +13,7 @@
 {% block content %}
     <h1 class="govuk-heading-l listing-page">Users</h1>
 
-    <a href="/v3/user-add" class="govuk-button listing-page">Add new user</a>
+    <a href="/v3/user-add" class="govuk-button listing-page">Add a user</a>
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
@@ -41,7 +41,7 @@
                             L4 User
                         {% endif %}
                     </td>
-                    <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                    <td class="govuk-table__cell">Pending activation</td>
                 </tr>
             {% endif %}
 
@@ -49,63 +49,63 @@
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary Speed</a></th>
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
+                <td class="govuk-table__cell">Suspended</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gordon Strachan</a></th>
                 <td class="govuk-table__cell">G3S</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary McAllister</a></th>
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Tony Dorigo</a></th>
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Mel Sterland</a></th>
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Doe</a></th>
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--inactive">Suspended</span></td>
+                <td class="govuk-table__cell">Suspended</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jackson Smith</a></th>
                 <td class="govuk-table__cell">Capita</td>
-                <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--l2">L2</span> Service admin</td>
-                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                <td class="govuk-table__cell">L2 Service admin</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Jessie Smith</a></th>
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Smith</a></th>
                 <td class="govuk-table__cell">Capita</td>
-                <td class="govuk-table__cell"><span class="govuk-tag govuk-tag--l1">L1</span> Super admin</td>
-                <td class="govuk-table__cell"><span class="govuk-tag">Active</span></td>
+                <td class="govuk-table__cell">L1 Super admin</td>
+                <td class="govuk-table__cell">Active</td>
             </tr>
         </tbody>
     </table>
