Make other org view pages consistent

--- a/app/views/mvp1/org-view-croydon.html
+++ b/app/views/mvp1/org-view-croydon.html
@@ -26,7 +26,7 @@
                             text: "Name"
                         },
                         value: {
-                            text: data['user-organisation']
+                            text: 'London Borough of Croydon Council'
                         }
                     },
                     {
