Update a bunch of stuff to say HTDS instead of PRaP

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,7 +29,7 @@
                     Strip out lots of user information from user list, and user view
                 </li>
                 <li>
-                    Make everything as if viewed by a PRaP service admin
+                    Make everything as if viewed by a <del>PRaP</del> HTDS service admin
                 </li>
                 <li>
                     Added a little more dynamicism to make better use of prototype data
@@ -45,6 +45,12 @@
                 </li>
                 <li>
                     Improved the suspend/delete actions on the User View page
+                </li>
+                <li>
+                    Added sign in/sign out views
+                </li>
+                <li>
+                    Changed organisation list views to make functionality more obvious
                 </li>
             </ul>
 
