--- a/app/views/mvp1/signed-out.html
+++ b/app/views/mvp1/signed-out.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Dashboard - PRaP - {{serviceName}}
+  Signed out - {{serviceName}}
 {% endblock %}
 
 {% block header %}
