--- a/app/views/mvp1/signin.html
+++ b/app/views/mvp1/signin.html
@@ -30,7 +30,7 @@
             }
         })}}
 
-        <p>To use <strong>PRaP</strong>, you need to prove it's you signing in.</p>
+        <p>To use <strong>HTDS</strong>, you need to prove it's you signing in.</p>
 
         {{ govukInput({
             label: {
