--- a/app/views/mvp1/dashboard-service-prap-no-orgs.html
+++ b/app/views/mvp1/dashboard-service-prap-no-orgs.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Dashboard - PRaP - {{serviceName}}
+  Dashboard - HTDS - {{serviceName}}
 {% endblock %}
 
 {% block header %}
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">Provider Referrals and Payments (PRaP)</h1>
+<h1 class="govuk-heading-l">HTDS</h1>
 
 <div class="govuk-cards govuk-cards--2">
     <div class="govuk-cards--2__item govuk-card--dashboard">
