Change 'suspended' to 'inactive'

--- a/app/views/mvp1/user-list-prap-capita-2.html
+++ b/app/views/mvp1/user-list-prap-capita-2.html
@@ -29,12 +29,12 @@
     </thead>
 
     <tbody class="govuk-table__body">
-    
+
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jon Newsome</a></th>
         <td class="govuk-table__cell">jon.newsome@capita.co.uk</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -51,7 +51,7 @@
 
 
 
-   
+
     </tbody>
   </table>
 
