--- a/app/views/mvp1/user-list-prap-croydon-2.html
+++ b/app/views/mvp1/user-list-prap-croydon-2.html
@@ -16,8 +16,8 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">London Borough of Croydon Council</span>Users</h1>
 
-  
-  
+
+
 
   <a href="user-add-user-prap-croydon" class="govuk-button listing-page">Add a user</a>
 
@@ -31,12 +31,12 @@
     </thead>
 
     <tbody class="govuk-table__body">
-      
+
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Manny Cussins</a></th>
         <td class="govuk-table__cell">m.cussins@croydon.gov.uk</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -78,16 +78,16 @@
                 <span aria-hidden="true" role="presentation">&laquo;</span> Previous
               </a>
             </li>
-      
+
             <li class="pagination__item">
               <a class="pagination__link" href="user-list-prap-croydon" aria-label="Page 1">1</a>
             </li>
-      
+
             <li class="pagination__item">
               <span class="pagination__link current" href="user-list-prap-croydon-2" aria-label="Page 2">2</span>
             </li>
-      
-        
+
+
           </ul>
         </nav>
 
