--- a/app/views/mvp1/user-list-prap-croydon.html
+++ b/app/views/mvp1/user-list-prap-croydon.html
@@ -16,8 +16,8 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">London Borough of Croydon Council</span>Users</h1>
 
-  
-  
+
+
 
   <a href="user-add-user-prap-croydon" class="govuk-button listing-page">Add a user</a>
 
@@ -42,13 +42,13 @@
       <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John McKenzie</a></th>
           <td class="govuk-table__cell">j.mckenzie@croydon.gov.uk</td>
-          <td class="govuk-table__cell">Suspended</td>
+          <td class="govuk-table__cell">Inactive</td>
         </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Peter Ridsdale</a></th>
         <td class="govuk-table__cell">p.ridsdale@croydon.gov.uk</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -75,7 +75,7 @@
         <td class="govuk-table__cell">Active</td>
       </tr>
 
-     
+
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Trevor Birch</a></th>
@@ -103,7 +103,7 @@
     </div>
 
     <ul class="pagination">
- 
+
 
       <li class="pagination__item">
         <span class="pagination__link current" aria-label="Page 1">1</span>
