--- a/app/views/mvp1/user-list-prap-g3s-2.html
+++ b/app/views/mvp1/user-list-prap-g3s-2.html
@@ -14,10 +14,10 @@
 
 
 {% block content %}
-  <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">G4S</span> 
+  <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">G4S</span>
       Users</h1>
 
-  
+
 
   <a href="user-add-user-prap-g3s" class="govuk-button listing-page">Add a user</a>
 
@@ -36,7 +36,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Bruce Sandison</a></th>
         <td class="govuk-table__cell">bruce.sandison@g4s.co.uk</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -64,7 +64,7 @@
             <td class="govuk-table__cell">Active</td>
           </tr>
 
-      
+
     </tbody>
   </table>
 
