--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -39,13 +39,13 @@
       <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">David Batty</a></th>
           <td class="govuk-table__cell">Capita</td>
-          <td class="govuk-table__cell">Suspended</td>
+          <td class="govuk-table__cell">Inactive</td>
         </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gary Speed</a></th>
         <td class="govuk-table__cell">Capita</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -72,7 +72,7 @@
         <td class="govuk-table__cell">Active</td>
       </tr>
 
-      
+
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Rod Wallace</a></th>
