--- a/app/views/v3/user-list.html
+++ b/app/views/v3/user-list.html
@@ -49,7 +49,7 @@
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">Gary Speed</a></th>
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell">Suspended</td>
+                <td class="govuk-table__cell">Inactive</td>
             </tr>
 
             <tr class="govuk-table__row">
@@ -84,7 +84,7 @@
                 <th scope="row" class="govuk-table__header"><a href="/v3/user-view" class="govuk-link">John Doe</a></th>
                 <td class="govuk-table__cell">Capita</td>
                 <td class="govuk-table__cell">L4 User</td>
-                <td class="govuk-table__cell">Suspended</td>
+                <td class="govuk-table__cell">Inactive</td>
             </tr>
 
             <tr class="govuk-table__row">
