--- a/app/views/mvp1/user-list-prap-2.html
+++ b/app/views/mvp1/user-list-prap-2.html
@@ -31,58 +31,57 @@
         <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jon Newsome</a></th>
             <td class="govuk-table__cell">Capita</td>
-            <td class="govuk-table__cell">Suspended</td>
+            <td class="govuk-table__cell">Inactive</td>
           </tr>
-    
+
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Whyte</a></th>
             <td class="govuk-table__cell">Capita</td>
             <td class="govuk-table__cell">Pending activation</td>
           </tr>
-    
+
           <tr class="govuk-table__row">
             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Fairclough</a></th>
             <td class="govuk-table__cell">Capita</td>
             <td class="govuk-table__cell">Active</td>
           </tr>
 
-
           <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Matt Hayes</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">Suspended</td>
+              <td class="govuk-table__cell">Inactive</td>
             </tr>
-      
+
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Mick Brown</a></th>
               <td class="govuk-table__cell">G4S</td>
               <td class="govuk-table__cell">Pending activation</td>
             </tr>
-      
+
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">April Vokey</a></th>
               <td class="govuk-table__cell">G4S</td>
               <td class="govuk-table__cell">Active</td>
             </tr>
-      
+
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John Wilson</a></th>
               <td class="govuk-table__cell">G4S</td>
               <td class="govuk-table__cell">Active</td>
             </tr>
-      
+
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Paul Young</a></th>
               <td class="govuk-table__cell">G4S</td>
               <td class="govuk-table__cell">Active</td>
             </tr>
-      
+
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Marina Gibson</a></th>
               <td class="govuk-table__cell">G4S</td>
-              <td class="govuk-table__cell">Suspended</td>
+              <td class="govuk-table__cell">Inactive</td>
             </tr>
-      
+
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jeremy Wade</a></th>
               <td class="govuk-table__cell">G4S</td>
@@ -97,38 +96,38 @@
       <div class="pagination__summary">
         Showing 11 &ndash; 20 of 74 results
       </div>
-  
+
       <ul class="pagination">
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap" aria-label="Previous page">
             <span aria-hidden="true" role="presentation">&laquo;</span> Previous
           </a>
         </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap" aria-label="Page 1">1</a>
         </li>
-  
+
         <li class="pagination__item">
           <span class="pagination__link current" aria-label="Page 2">2</span>
         </li>
-  
+
         <li class="pagination__item">
             <a class="pagination__link" href="user-list-prap-3" aria-label="Page 3">3</a>
           </li>
-  
+
           <li class="pagination__item">
               <a class="pagination__link" href="user-list-prap-4" aria-label="Page 4">4</a>
             </li>
-  
+
             <li class="pagination__item">
                 <a class="pagination__link" href="user-list-prap-5" aria-label="Page 5">5</a>
               </li>
-  
+
               <li class="pagination__item">
                   <a class="pagination__link" href="user-list-prap-6" aria-label="Page 6">6</a>
                 </li>
-  
+
                 <li class="pagination__item">
                     <a class="pagination__link" href="user-list-prap-7" aria-label="Page 7">7</a>
                   </li>
@@ -136,7 +135,7 @@
                   <li class="pagination__item">
                       <a class="pagination__link" href="user-list-prap-8" aria-label="Page 8">8</a>
                     </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap-3" aria-label="Next page">
             Next <span aria-hidden="true" role="presentation">&raquo;</span>
