--- a/app/views/mvp1/user-list-prap-3.html
+++ b/app/views/mvp1/user-list-prap-3.html
@@ -33,13 +33,13 @@
                     <td class="govuk-table__cell">G4S</td>
                     <td class="govuk-table__cell">Active</td>
                   </tr>
-            
+
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Bob Nudd</a></th>
                     <td class="govuk-table__cell">G4S</td>
                     <td class="govuk-table__cell ">Active</td>
                   </tr>
-            
+
                   <tr class="govuk-table__row">
                       <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Robert Church</a></th>
                       <td class="govuk-table__cell">G4S</td>
@@ -49,28 +49,28 @@
                     <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Bruce Sandison</a></th>
                             <td class="govuk-table__cell">G4S</td>
-                            <td class="govuk-table__cell">Suspended</td>
+                            <td class="govuk-table__cell">Inactive</td>
                           </tr>
-                    
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Rex Hunt</a></th>
                             <td class="govuk-table__cell">G4S</td>
                             <td class="govuk-table__cell">Pending activation</td>
                           </tr>
-                    
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Robson Green</a></th>
                             <td class="govuk-table__cell">G4S</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Dean Macey</a></th>
                             <td class="govuk-table__cell">G4S</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
-                    
+
+
                           <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Ali Hamidi</a></th>
                                 <td class="govuk-table__cell">G4S</td>
@@ -81,16 +81,16 @@
            <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">John McKenzie</a></th>
           <td class="govuk-table__cell">London Borough of Croydon Council</td>
-          <td class="govuk-table__cell">Suspended</td>
+          <td class="govuk-table__cell">Inactive</td>
         </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Peter Ridsdale</a></th>
         <td class="govuk-table__cell">London Borough of Croydon Council</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
- 
+
 
 
     </tbody>
@@ -100,38 +100,38 @@
       <div class="pagination__summary">
         Showing 21 &ndash; 30 of 74 results
       </div>
-  
+
       <ul class="pagination">
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap-2" aria-label="Previous page">
             <span aria-hidden="true" role="presentation">&laquo;</span> Previous
           </a>
         </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap" aria-label="Page 1">1</a>
         </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link"  href="user-list-prap-2" aria-label="Page 2">2</a>
         </li>
-  
+
         <li class="pagination__item">
             <span class="pagination__link current" aria-label="Page 3">3</span>
           </li>
-  
+
           <li class="pagination__item">
               <a class="pagination__link" href="user-list-prap-4" aria-label="Page 4">4</a>
             </li>
-  
+
             <li class="pagination__item">
                 <a class="pagination__link" href="user-list-prap-5" aria-label="Page 5">5</a>
               </li>
-  
+
               <li class="pagination__item">
                   <a class="pagination__link" href="user-list-prap-6" aria-label="Page 6">6</a>
                 </li>
-  
+
                 <li class="pagination__item">
                     <a class="pagination__link" href="user-list-prap-7" aria-label="Page 7">7</a>
                   </li>
@@ -139,7 +139,7 @@
                   <li class="pagination__item">
                       <a class="pagination__link" href="user-list-prap-8" aria-label="Page 8">8</a>
                     </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap-4" aria-label="Next page">
             Next <span aria-hidden="true" role="presentation">&raquo;</span>
