--- a/app/views/mvp1/user-list-prap-g3s.html
+++ b/app/views/mvp1/user-list-prap-g3s.html
@@ -14,10 +14,10 @@
 
 
 {% block content %}
-  <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">G4S</span> 
+  <h1 class="govuk-heading-l listing-page"><span class="govuk-caption-l">G4S</span>
       Users</h1>
 
-  
+
 
   <a href="user-add-user-prap-g3s" class="govuk-button listing-page">Add a user</a>
 
@@ -42,7 +42,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Matt Hayes</a></th>
         <td class="govuk-table__cell">matt.hayes@g4s.co.uk</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -72,7 +72,7 @@
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Marina Gibson</a></th>
         <td class="govuk-table__cell">marina.gibson@g4s.co.uk</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
