--- a/app/views/mvp1/user-list-prap-serco.html
+++ b/app/views/mvp1/user-list-prap-serco.html
@@ -40,13 +40,13 @@
       <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">William Bremner</a></th>
           <td class="govuk-table__cell">wbremner@serco.co.uk</td>
-          <td class="govuk-table__cell">Suspended</td>
+          <td class="govuk-table__cell">Inactive</td>
         </tr>
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Edward Gray</a></th>
         <td class="govuk-table__cell">egray@serco.co.uk</td>
-        <td class="govuk-table__cell">Suspended</td>
+        <td class="govuk-table__cell">Inactive</td>
       </tr>
 
       <tr class="govuk-table__row">
@@ -73,7 +73,7 @@
         <td class="govuk-table__cell">Active</td>
       </tr>
 
-      
+
 
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Allan Clarke</a></th>
@@ -81,13 +81,13 @@
         <td class="govuk-table__cell">Active</td>
       </tr>
 
-     
 
-   
+
+
     </tbody>
   </table>
 
-  
+
 
   <p class="govuk-!-margin-top-9">
     <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
