Change more PRaP to HTDS

--- a/app/views/mvp1/organisation-list-prap.html
+++ b/app/views/mvp1/organisation-list-prap.html
@@ -14,7 +14,7 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l listing-page">Organisations using PRaP</h1>
+            <h1 class="govuk-heading-l listing-page">Organisations using HTDS</h1>
 
             <a href="organisation-add-prap" class="govuk-button listing-page">Add an organisation</a>
 
