Change 'user-organisation' to 'organisation-name' throughout, create V4, remove 'dwp user' route option in Add User

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,21 @@
 
             <a href="/mvp1/signin" class="govuk-button govuk-!-margin-right-1">View MVP prototype</a>
             <a href="/mvp1/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
+
+            <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+            <time datetime="2019-11-27" class="govuk-caption-l">27 November 2019</time>
+
+            <h2 class="govuk-heading-l">v4</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>
+                    'Is user employed by the DWP?' question in Add User journey
+                </li>
+            </ul>
+
+            <a href="/v4/signin" class="govuk-button govuk-!-margin-right-1">View v4 prototype</a>
+            <a href="/v4/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
         {% endset %}
 
         {% set previousVersionsHtml %}
