--- a/app/views/mvp1/dashboard-service-prap.html
+++ b/app/views/mvp1/dashboard-service-prap.html
@@ -55,7 +55,7 @@
 
         <ul class="govuk-list">
             <li>
-                <a href="user-add-prap" class="govuk-link">Add a user</a>
+                <a href="user-add-user-prap-org" class="govuk-link">Add a user</a>
             </li>
 
             <li>
