--- a/app/views/mvp1/user-list-prap-8.html
+++ b/app/views/mvp1/user-list-prap-8.html
@@ -16,7 +16,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add-prap" class="govuk-button listing-page">Add a user</a>
+  <a href="user-add-user-prap-org" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -28,34 +28,34 @@
     </thead>
 
     <tbody class="govuk-table__body">
-        
-                
+
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Allan Clarke</a></th>
                             <td class="govuk-table__cell">Serco</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Edward Gray</a></th>
                             <td class="govuk-table__cell">Serco</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
-                    
+
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Jonathon Giles</a></th>
                             <td class="govuk-table__cell">Serco</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
 
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Donald Revie</a></th>
                             <td class="govuk-table__cell">Serco</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
 
     </tbody>
   </table>
@@ -64,38 +64,38 @@
       <div class="pagination__summary">
         Showing 71 &ndash; 74 of 74 results
       </div>
-  
+
       <ul class="pagination">
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap-7" aria-label="Previous page">
             <span aria-hidden="true" role="presentation">&laquo;</span> Previous
           </a>
         </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap" aria-label="Page 1">1</a>
         </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link"  href="user-list-prap-2" aria-label="Page 2">2</a>
         </li>
-  
+
         <li class="pagination__item">
             <a class="pagination__link" href="user-list-prap-3" aria-label="Page 3">3</a>
           </li>
-  
+
           <li class="pagination__item">
               <a class="pagination__link"  href="user-list-prap-4" aria-label="Page 4">4</a>
             </li>
-  
+
             <li class="pagination__item">
                 <a class="pagination__link" href="user-list-prap-5" aria-label="Page 5">5</a>
               </li>
-  
+
               <li class="pagination__item">
                   <a class="pagination__link" href="user-list-prap-6" aria-label="Page 6">6</a>
                 </li>
-  
+
                 <li class="pagination__item">
                     <a class="pagination__link" href="user-list-prap-7" aria-label="Page 7">7</a>
                   </li>
@@ -103,7 +103,7 @@
                   <li class="pagination__item">
                       <span class="pagination__link current" href="#" aria-label="Page 8">8</span>
                     </li>
-  
+
         <li class="pagination__item">
           <span class="pagination__link disabled" aria-label="Next page">
             Next <span aria-hidden="true" role="presentation">&raquo;</span>
