--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -257,7 +257,7 @@ a.pagination__link:focus {
   }
 
   @include govuk-media-query($from: desktop) {
-    flex: 0 1 calc(33.333333% - 14px);
+    flex: 0 1 27%;
 
     &:not(:nth-child(3n+3)) {
       margin-right: 20px;
