--- a/app/views/mvp1/user-list-prap-6.html
+++ b/app/views/mvp1/user-list-prap-6.html
@@ -16,7 +16,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add-prap" class="govuk-button listing-page">Add a user</a>
+  <a href="user-add-user-prap-org" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -28,13 +28,13 @@
     </thead>
 
     <tbody class="govuk-table__body">
-        
+
                   <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Carl Shutt</a></th>
                     <td class="govuk-table__cell">Remploy</td>
                     <td class="govuk-table__cell ">Active</td>
                   </tr>
-            
+
                   <tr class="govuk-table__row">
                       <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Tony Yeboah</a></th>
                       <td class="govuk-table__cell">Remploy</td>
@@ -46,57 +46,57 @@
                             <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Mervyn Day</a></th>
                             <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Robert Molenaar</a></th>
                             <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Nigella Worthington</a></th>
                             <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
-                    
+
+
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">David Rocastle</a></th>
                             <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
 
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">David White</a></th>
                             <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
 
                           <tr class="govuk-table__row">
                             <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Catherine Palmer</a></th>
                             <td class="govuk-table__cell">Remploy</td>
                             <td class="govuk-table__cell">Active</td>
                           </tr>
-                    
+
 
                           <tr class="govuk-table__row">
                                 <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Kamara</a></th>
                                 <td class="govuk-table__cell">Remploy</td>
                                 <td class="govuk-table__cell">Active</td>
                               </tr>
-                                
-          
-      
 
- 
+
+
+
+
 
 
     </tbody>
@@ -106,38 +106,38 @@
       <div class="pagination__summary">
         Showing 51 &ndash; 60 of 74 results
       </div>
-  
+
       <ul class="pagination">
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap-5" aria-label="Previous page">
             <span aria-hidden="true" role="presentation">&laquo;</span> Previous
           </a>
         </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap" aria-label="Page 1">1</a>
         </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link"  href="user-list-prap-2" aria-label="Page 2">2</a>
         </li>
-  
+
         <li class="pagination__item">
             <a class="pagination__link" href="user-list-prap-3" aria-label="Page 3">3</a>
           </li>
-  
+
           <li class="pagination__item">
               <a class="pagination__link"  href="user-list-prap-4" aria-label="Page 4">4</a>
             </li>
-  
+
             <li class="pagination__item">
                 <a class="pagination__link" href="user-list-prap-5" aria-label="Page 5">5</a>
               </li>
-  
+
               <li class="pagination__item">
                   <span class="pagination__link current" href="#" aria-label="Page 6">6</span>
                 </li>
-  
+
                 <li class="pagination__item">
                     <a class="pagination__link" href="user-list-prap-7" aria-label="Page 7">7</a>
                   </li>
@@ -145,7 +145,7 @@
                   <li class="pagination__item">
                       <a class="pagination__link" href="user-list-prap-8" aria-label="Page 8">8</a>
                     </li>
-  
+
         <li class="pagination__item">
           <a class="pagination__link" href="user-list-prap-7" aria-label="Next page">
             Next <span aria-hidden="true" role="presentation">&raquo;</span>
