--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -16,7 +16,7 @@
 {% block content %}
   <h1 class="govuk-heading-l listing-page">Users</h1>
 
-  <a href="user-add-prap" class="govuk-button listing-page">Add a user</a>
+  <a href="user-add-user-prap-org" class="govuk-button listing-page">Add a user</a>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -31,7 +31,7 @@
       {% if data['user-full-name'] %}
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">{{ data['user-full-name'] }}</a></th>
-        <td class="govuk-table__cell">{{ data['user-organisation'] }}</td>
+        <td class="govuk-table__cell">{{ data['organisation-name'] }}</td>
         <td class="govuk-table__cell">Pending activation</td>
       </tr>
       {% endif %}
